--- a/portifolio/src/styles/projects.css
+++ b/portifolio/src/styles/projects.css
@@ -1,3 +1,68 @@
+.section-projects {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .div-projects {
-  height: 70vh;
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.div-project-individual {
+  margin-top: 25px;
+  margin-bottom: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(80, 80, 80);
+  color: white;
+  border-style: inset;
+  border-radius: 15px;
+  width: 19%;
+  height: 550px;
+  padding: 1%;
+  text-align: center;
+}
+
+.div-project-individual h3 {
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.div-project-individual p {
+  font-size: 16px;
+}
+
+.link-img {
+  width: 20px;
+  margin: 10px;
+}
+
+.github-img {
+ width: 20px;
+ margin: 10px;
+}
+
+.projects-links {
+  display: flex;
+  justify-content: center;
+}
+
+.a-links {
+  display: flex;
+  align-items: center;
+  text-decoration: underline;
+  color: white;
+}
+
+.img-projects {
+  width: 100%;
+  border-radius: 15px;
 }
